--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,25 +8,27 @@ services:
     container_name: service_foundation
     restart: always
     environment:
-      SPRING_PROFILES_ACTIVE: prod
-      SERVICE_FOUNDATION_ENV: PROD
-      MYSQL_HOST: mysql
-      MYSQL_PORT: 3306
-      MYSQL_USER: zhang
-      MYSQL_PASS: 123456
-      MYSQL_ROOT_PASSWORD: rootpw
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      REDIS_PASSWORD:
-      REDIS_DB: 0
-      KAFKA_HOST: kafka
-      KAFKA_PORT: 9093
+      # running environment
+      RUN_ENV: prod
+      # django settings
+#      DJANGO_SETTINGS_MODULE: service_foundation.settings
+      DEBUG: "False"
+      # application configuration
+      HOST: 0.0.0.0
+      PORT: 8000
+      ALLOWED_HOSTS: "*"
+      # gunicorn configuration
+      GUNICORN_WORKERS: 4
+      GUNICORN_THREADS: 2
+      GUNICORN_TIMEOUT: 30
+      # logging
       LOG_LEVEL: INFO
       LOG_DIR: /var/log/service_foundation
     ports:
-      - "10000:8080"
+      - "10000:8000"
     volumes:
       - ./docker/log:/var/log/service_foundation
+      - ./docker/.env.prod:/app/.env.prod:ro
     networks:
       - infrastructure_infrastructure
 
