--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,12 @@ services:
       dockerfile: Dockerfile
     container_name: service_foundation
     restart: always
+    # Use network mode host or capabilities for privileged ports (25, 143)
+    # Alternatively, use non-privileged ports in container and map to host ports
+    # For standard ports, use: network_mode: "host" or add capabilities
+    # For non-root user, use non-privileged ports and map them
+    cap_add:
+      - NET_BIND_SERVICE  # Allow binding to privileged ports (< 1024)
     environment:
       # running environment
       RUN_ENV: prod
@@ -20,8 +26,18 @@ services:
       # logging
       LOG_LEVEL: INFO
       LOG_DIR: /var/log/service_foundation
+      # mail server configuration
+      START_MAIL_SERVER: "true"  # Enable/disable mail servers (true/false)
+      MAIL_SMTP_PORT: 25  # SMTP port (default: 25, requires root or NET_BIND_SERVICE)
+      MAIL_IMAP_PORT: 143  # IMAP port (default: 143, requires root or NET_BIND_SERVICE)
+      MAIL_SERVER_HOST: "0.0.0.0"  # Bind address for mail servers
+      # OSS configuration for mail attachments
+      MAIL_OSS_BUCKET: "mail-attachments"  # Default bucket for attachments
+      MAIL_OSS_ENDPOINT: "http://localhost:8000/api/oss"  # OSS endpoint URL
     ports:
-      - "8000:8000"
+      - "8000:8000"  # Django web server
+      - "25:25"      # SMTP server (mail receiving)
+      - "143:143"    # IMAP server (mail access)
     volumes:
       - ./docker/log:/var/log/service_foundation
       - ./docker/.env.prod:/app/.env.prod:ro
