--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,14 @@ LOG_LEVEL_APP_SERV_FD=INFO
 LOG_LEVEL_APP_MAILSERVER=INFO
 LOG_LEVEL_APP_OSS=INFO
 LOG_LEVEL_APP_SNOWFLAKE=INFO
+
+MONGO_ATLAS_USER=your_mongo_user
+MONGO_ATLAS_PASS=your_mongo_password
+MONGO_ATLAS_HOST=your_cluster_id.mongodb.net
+MONGO_ATLAS_CLUSTER=cluster0
+MONGO_ATLAS_DB=know
+
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASS=your_neo4j_password
+NEO4J_DATABASE=neo4j
