--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
 RUN_ENV=test
 
 
+# App Enable Switches (true/false)
+# Control which apps are loaded at runtime
+APP_KNOW_ENABLED=true
+APP_MAILSERVER_ENABLED=true
+APP_OSS_ENABLED=true
+APP_SNOWFLAKE_ENABLED=true
+
+
 SNOWFLAKE_DATACENTER_ID=0
 SNOWFLAKE_MACHINE_ID=0
 SNOWFLAKE_START_TIMESTAMP=1609459200000
