--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-RUN_ENV=test
+RUN_ENV=dev
 
 
 # App Enable Switches (true/false)
 # Control which apps are loaded at runtime
+APP_CONSOLE_ENABLED=true
 APP_KNOW_ENABLED=true
 APP_MAILSERVER_ENABLED=true
 APP_OSS_ENABLED=true
