--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,13 @@ log/
 *.tar.gz
 *.rar
 
+# Frontend Files
+staticfiles/admin/css/vendor/
+staticfiles/admin/fonts/
+staticfiles/admin/img/
+staticfiles/admin/js/vendor/
+staticfiles/rest_framework/
+
 # Docker
 docker/
 
