--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,19 @@ DB_SNOWFLAKE_USER=zhang
 DB_SNOWFLAKE_PASS=123456
 
 
+MONGO_ATLAS_USER=your_mongo_user
+MONGO_ATLAS_PASS=your_mongo_password
+MONGO_ATLAS_HOST=your_cluster_id.mongodb.net
+MONGO_ATLAS_CLUSTER=cluster0
+MONGO_ATLAS_DB=know
+
+
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASS=your_neo4j_password
+NEO4J_DATABASE=neo4j
+
+
 LOG_HANDLER=logfile
 LOG_LEVEL=INFO
 LOG_FILE_PATH=log/app.log
@@ -50,14 +63,5 @@ LOG_LEVEL_APP_SERV_FD=INFO
 LOG_LEVEL_APP_MAILSERVER=INFO
 LOG_LEVEL_APP_OSS=INFO
 LOG_LEVEL_APP_SNOWFLAKE=INFO
-
-MONGO_ATLAS_USER=your_mongo_user
-MONGO_ATLAS_PASS=your_mongo_password
-MONGO_ATLAS_HOST=your_cluster_id.mongodb.net
-MONGO_ATLAS_CLUSTER=cluster0
-MONGO_ATLAS_DB=know
-
-NEO4J_URI=bolt://localhost:7687
-NEO4J_USER=neo4j
-NEO4J_PASS=your_neo4j_password
-NEO4J_DATABASE=neo4j
+LOG_LEVEL_APP_KNOW=INFO
+LOG_LEVEL_COMMON=INFO
