--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,13 @@ NEO4J_PASS=your_neo4j_password
 NEO4J_DATABASE=neo4j
 
 
+# aigc
+AIGC_API_URL=https://api2.aigcbest.top/v1
+AIGC_API_KEY=your_key
+AIGC_GPT_MODEL=gpt-5
+AIGC_EMBEDDING_MODEL=text-embedding-3-small
+
+
 LOG_HANDLER=logfile
 LOG_LEVEL=INFO
 LOG_FILE_PATH=log/app.log
