bugs of vector-searching fixed, frontend improved

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ APP_OSS_ENABLED=true
 APP_SNOWFLAKE_ENABLED=true
 
 
+# Knowledge component similarity threshold (0.0-1.0, default 0.99)
+KNOW_SIMILARITY_REUSE_THRESHOLD=0.99
+
+
 SNOWFLAKE_DATACENTER_ID=0
 SNOWFLAKE_MACHINE_ID=0
 SNOWFLAKE_START_TIMESTAMP=1609459200000
