search for title added into knowledge list

--- a/docs/api_know_console_level1.json
+++ b/docs/api_know_console_level1.json
@@ -35,7 +35,7 @@
     "/knowledge": {
       "get": {
         "summary": "知识列表",
-        "description": "分页获取知识列表。当传入 summary 时，通过 AIGC embedding 转为向量，在 Atlas knowledge_summaries 集合中按语义相似度查询，返回相似度不低于 KNOW_SIMILARITY_MISMATCH_THRESHOLD 的 top5，结果中每项含 similarity 字段（0～1）。",
+        "description": "分页获取知识列表。当传入 title 时，按标题进行左对齐前缀匹配查询（title 优先于 summary）。当传入 summary 时（且未传入 title），通过 AIGC embedding 转为向量，在 Atlas knowledge_summaries 集合中按语义相似度查询，返回相似度不低于 KNOW_SIMILARITY_MISMATCH_THRESHOLD 的 top5，结果中每项含 similarity 字段（0～1）。",
         "parameters": [
           {
             "name": "offset",
@@ -64,12 +64,20 @@
             "description": "来源类型"
           },
           {
+            "name": "title",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            },
+            "description": "标题筛选：按标题进行左对齐前缀匹配查询（优先级高于 summary）"
+          },
+          {
             "name": "summary",
             "in": "query",
             "schema": {
               "type": "string"
             },
-            "description": "摘要筛选：输入文本经 embedding 后按语义相似度查询，返回匹配的 top5 知识"
+            "description": "摘要筛选：输入文本经 embedding 后按语义相似度查询，返回匹配的 top5 知识（当 title 参数存在时被忽略）"
           }
         ],
         "responses": {
